--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">AL_Doodler</string>
+    <string name="title_activity_list_files">ListFilesAct</string>
+    <string name="text_empty">No files yet. Starting drawing and save your doodles here!</string>
 </resources>
